fixing box floats with small line-height instead of vertical-align.

--- a/css/wellejus.styles.css
+++ b/css/wellejus.styles.css
@@ -595,7 +595,7 @@ h6 {
 }
 /* line 85, ../sass/module/_wellejus.openinghours.scss */
 .topbar-inner .opening-hours-list .details span {
-  vertical-align: middle;
+  line-height: 14px;
 }
 
 /**
