--- a/sass/module/_wellejus.openinghours.scss
+++ b/sass/module/_wellejus.openinghours.scss
@@ -83,7 +83,7 @@
     
     .details {
       span {
-        vertical-align: middle;
+        line-height: $base-font-size;
       }
     }
     
